--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tarjeta Digital (Demo)</title>
   <link rel="stylesheet" href="./styles.css" />
+  
+<meta property="og:type" content="website">
+<meta property="og:title" content="Tarjeta Digital">
+<meta property="og:description" content="Tarjeta digital con WhatsApp, llamada, email, guardar contacto y más.">
+<meta property="og:url" content="https://claudiapiba.github.io/tarjeta-digital/?v=1">
+<meta property="og:image" content="https://claudiapiba.github.io/tarjeta-digital/preview.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Tarjeta Digital">
+<meta name="twitter:description" content="Tarjeta digital con WhatsApp, llamada, email y guardar contacto.">
+<meta name="twitter:image" content="https://claudiapiba.github.io/tarjeta-digital/preview.png">
 </head>
 
 <body>
