--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Nombre de la Abogada">
-  <meta property="og:title" content="Tarjeta Digital">
-  <meta property="og:description" content="Tarjeta digital con WhatsApp, llamada, email, guardar contacto y más.">
+  <meta property="og:site_name" content="Claudia Piñas">
+  <meta property="og:title" content="Claudia Piñas">
+  <!-- <meta property="og:description" content="Tarjeta digital con WhatsApp, llamada, email, guardar contacto y más."> -->
   <meta property="og:url" content="https://claudiapiba.github.io/tarjeta-digital/">
   <meta property="og:image" content="https://claudiapiba.github.io/tarjeta-digital/preview.png">
   <meta property="og:image:type" content="image/png">
