--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Tarjeta Digital">
-  <meta name="twitter:description" content="Tarjeta digital con WhatsApp, llamada, email y guardar contacto.">
+  <meta name="twitter:title" content="Claudia Piñas">
+  <!-- <meta name="twitter:description" content="Tarjeta digital con WhatsApp, llamada, email y guardar contacto."> -->
   <meta name="twitter:image" content="https://claudiapiba.github.io/tarjeta-digital/preview.png">
 </head>
 
